Thu Jun 12 02:49:40 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/stringio/stringio.c (strio_init): rewind when reopened.

Thu Jun 12 02:43:27 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* array.c (rb_ary_zip): ANSI style.

Thu Jun 12 02:25:54 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_reopen): clear read buffer.

Thu Jun 12 00:56:20 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk: check proper conditions.  [ruby-dev:35047]

Wed Jun 11 23:33:13 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (io_fread): bypass buffered read if reading buffer is empty.

	* io.c (remain_size): do not add extra one byte.

Wed Jun 11 12:15:17 2008  Tanaka Akira  <akr@fsij.org>

	* bootstraptest/runner.rb (assert_normal_exit): hide stderr output
	  when success.

Wed Jun 11 09:26:43 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk (encs): need to pass miniruby path for windows.

Wed Jun 11 05:53:20 2008  Koichi Sasada  <ko1@atdot.net>

	* vm.c, eval_intern.h (PASS_PASSED_BLOCK):
	  set a VM_FRAME_FLAG_PASSED flag to skip this frame when
	  searching ruby-level-cfp.

	* eval.c, eval_intern.h, proc.c: fix to check cfp.  if there is
	  no valid ruby-level-cfp, cause RuntimeError exception.
	  [ruby-dev:34128]

	* vm_core.h, vm_evalbody.c, vm.c, vm_dump.c, vm_insnhelper.c,
	  insns.def: rename FRAME_MAGIC_* to VM_FRAME_MAGIC_*.

	* KNOWNBUGS.rb, bootstraptest/test*.rb: move solved bugs.

Wed Jun 11 05:55:31 2008  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tcltklib.c: SEGV when tcltk-stubs is enabled.

	* ext/tk/tcltklib.c: avoid error on a shared object.

	* ext/tk/extconf.rb: support --with-tcltkversion

	* ext/tk/README.tcltklib: add document about --with-tcltkversion

	* ext/tk/lib/tk.rb, ext/tk/lib/multi-tk.rb, ext/tk/lib/remote-tk.rb: 
	  not work on $SAFE==4

	* ext/tk/lib/multi-tk.rb: Object#methods returns Symbols on Ruby1.9.

	* ext/tk/lib/tk/timer.rb: add TkTimer#at_end(proc) to register the 